# pandar

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile.api  PRODUCT.md  README.md  docker-compose.postgres.yml  docker-compose.sqlite.yml  flake.nix  lefthook.yml
crates/pandar-agent/: Cargo.toml  build.rs
crates/pandar-agent/src/: commands.rs  lib.rs  main.rs  protocol.rs
crates/pandar-agent/src/commands/: artifacts.rs  config.rs  diagnostics.rs  events.rs  operations.rs  tests.rs
crates/pandar-agent/src/commands/tests/: artifacts.rs  diagnostics.rs  print.rs
crates/pandar-agent/src/machine/: compatibility.rs  diagnostics.rs  discovery.rs  file_transfer.rs  ftps.rs  materials.rs  mod.rs  mqtt.rs  operations.rs  tests.rs
crates/pandar-agent/src/machine/diagnostics/: tests.rs
crates/pandar-agent/src/machine/file_transfer/: tests.rs
crates/pandar-agent/src/machine/materials/: tests.rs
crates/pandar-agent/src/machine/mqtt/: tests.rs
crates/pandar-app/: Cargo.toml
crates/pandar-app/src/: main.rs
crates/pandar-hub/: Cargo.toml
crates/pandar-hub/migrations/postgres/: 20260622000000_phase_5_print_jobs.sql  20260622010000_phase_6_auth_audit.sql  20260622030000_phase_10_external_identity.sql  20260622040000_phase_11_provisioning.sql  20260623000000_phase_13_command_results.sql  20260623010000_phase_14_materials.sql  20260625000000_phase_31_external_onboarding.sql
crates/pandar-hub/migrations/sqlite/: 20260620000000_phase_1_foundation.sql  20260620010000_phase_2_agent_commands.sql  20260621000000_phase_4_printer_state.sql  20260622000000_phase_5_print_jobs.sql  20260622020000_phase_9_print_reports.sql  20260623020000_phase_16_tenant_tokens_agent_credentials.sql  20260623030000_hub_control_plane_tickets.sql  20260624010000_phase_28_slicer_metadata.sql
crates/pandar-hub/src/: bootstrap.rs  cleanup.rs  cluster.rs  db.rs  grpc.rs  identity.rs  jobs.rs  lib.rs  main.rs  metrics.rs  metrics_export.rs  printer_events.rs  readiness.rs  redaction.rs  routes.rs  runtime.rs  sessions.rs
crates/pandar-hub/src/artifacts/: app_state.rs  filesystem.rs  metadata.rs  mod.rs  s3.rs
crates/pandar-hub/src/artifacts/metadata/: tests.rs  types.rs
crates/pandar-hub/src/artifacts/s3/: redaction.rs  staging.rs  tests.rs
crates/pandar-hub/src/cleanup/: options.rs  sql.rs
crates/pandar-hub/src/cluster/: tests.rs
crates/pandar-hub/src/entities/: agents.rs  api_tokens.rs  audit_events.rs  commands.rs  job_artifacts.rs  job_filament_usages.rs  jobs.rs  join_links.rs  machine_events.rs  mod.rs  plugin_login_tickets.rs  printer_material_snapshots.rs  printers.rs  tenant_tokens.rs  tenants.rs  user_identities.rs  users.rs
crates/pandar-hub/src/grpc/: commands.rs  outbound.rs  print_reports.rs  printer_snapshots.rs
crates/pandar-hub/src/grpc/tests/: commands.rs  lifecycle.rs  mod.rs  print_jobs.rs  print_reports.rs  printer_snapshots.rs
crates/pandar-hub/src/identity/: config.rs  verifier.rs  verifier_tests.rs
crates/pandar-hub/src/repositories/: agents.rs  audit.rs  auth.rs  commands.rs  counts.rs  jobs.rs  materials.rs  mod.rs  printer_event_tickets.rs  printers.rs  tenants.rs  tests.rs
crates/pandar-hub/src/repositories/adapters/: mod.rs  printers.rs
crates/pandar-hub/src/repositories/agents/: pairing.rs
crates/pandar-hub/src/repositories/auth/: bootstrap.rs  identities.rs  onboarding.rs  plugin_tickets.rs  secrets.rs  tenant_tokens.rs  tokens.rs  users.rs
crates/pandar-hub/src/repositories/auth/identities/: provisioning.rs
crates/pandar-hub/src/repositories/auth/tokens/: provisioning.rs
crates/pandar-hub/src/repositories/auth/users/: provisioning.rs
crates/pandar-hub/src/repositories/commands/: audit.rs  enqueue.rs  inserts.rs  operations.rs  ownership.rs  rows.rs  transitions.rs
crates/pandar-hub/src/repositories/jobs/: artifacts.rs  audit.rs  create.rs  hydration.rs  print_reports.rs  recovery.rs  rows.rs  transitions.rs
crates/pandar-hub/src/repositories/jobs/create/: payload.rs
crates/pandar-hub/src/repositories/jobs/print_reports/: correlation.rs  events.rs  state.rs  usage.rs
crates/pandar-hub/src/repositories/materials/: merge.rs  patch.rs
crates/pandar-hub/src/repositories/tests/: auth.rs  cleanup.rs  command_results.rs  commands.rs  jobs.rs  materials.rs  mod.rs  phase1.rs  postgres.rs  postgres_commands.rs  postgres_persistence.rs  printer_event_tickets.rs  printers.rs  tenant_tokens.rs
crates/pandar-hub/src/repositories/tests/cleanup/: retention.rs  storage.rs
crates/pandar-hub/src/repositories/tests/jobs/: lifecycle.rs  mapping.rs  mod.rs  recovery.rs  repository.rs
crates/pandar-hub/src/repositories/tests/materials/: fixtures.rs  log_capture.rs
crates/pandar-hub/src/routes/: admin.rs  agents.rs  artifacts.rs  audit_events.rs  auth.rs  bootstrap.rs  jobs.rs  join_links.rs  onboarding.rs  plugin.rs  printer_events.rs  printer_operations.rs  printers.rs  provisioning.rs  status.rs  tenant_tokens.rs  tests.rs
crates/pandar-hub/src/routes/jobs/: material.rs  metadata_preview.rs  multipart.rs
crates/pandar-hub/src/routes/jobs/multipart/: types.rs
crates/pandar-hub/src/routes/provisioning/: agents.rs  tokens.rs  users.rs
crates/pandar-hub/src/routes/tests/: agents.rs  artifacts.rs  basic.rs  bootstrap.rs  jobs.rs  multipart.rs  onboarding.rs  plugin.rs  plugin_multipart.rs  plugin_redaction.rs  printer_commands.rs  printer_events_ws.rs  printers.rs  provisioning.rs  readiness_metrics.rs  tenant_tokens.rs
crates/pandar-hub/src/routes/tests/fixtures/: external_auth_jwks.json
crates/pandar-network-plugin/: Cargo.toml  build.rs
crates/pandar-network-plugin/src/: lib.rs  local_webserver.rs  shim.cpp
crates/pandar-network-plugin/tests/: exports.rs  http_boundary.rs  local_webserver.rs  local_webserver_startup.rs  studio_abi_probe.rs
crates/pandar-network-plugin/tests/fixtures/: studio_abi_probe.cpp
crates/pandar-network-plugin/tests/support/: mod.rs
tools/scaled-artifact-smoke/: Cargo.toml
tools/scaled-artifact-smoke/src/: fixture.rs  harness.rs  http.rs  live.rs  main.rs  scenarios.rs  storage.rs
(+183 files in other folders)
