[workspace]
members = [
    "crates/pandar-agent",
    "crates/pandar-app",
    "crates/pandar-core",
    "crates/pandar-hub",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-2.0-only"
repository = "https://github.com/indexyz/pandar"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive", "env"] }
http-body-util = "0.1.3"
pandar-core = { path = "crates/pandar-core" }
prost = "0.14"
protoc-bin-vendored = "3.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "migrate", "macros"] }
tempfile = "3.24.0"
thiserror = "2.0.17"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
tonic = "0.14.6"
tonic-prost = "0.14.6"
tonic-prost-build = "0.14.6"
tower = "0.5.2"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
