[workspace]
members = [
    "crates/pandar-agent",
    "crates/pandar-app",
    "crates/pandar-core",
    "crates/pandar-hub",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-2.0-only"
repository = "https://github.com/indexyz/pandar"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22"
clap = { version = "4.6.1", features = ["derive", "env"] }
http-body-util = "0.1.3"
pandar-core = { path = "crates/pandar-core" }
prost = "0.14"
protoc-bin-vendored = "3.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
rumqttc = "0.25.1"
rustls = "=0.23.40"
sea-orm = { version = "2.0.0-rc.41", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "with-json", "with-time"] }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "postgres", "migrate", "macros"] }
suppaftp = { version = "9.0.0", default-features = false, features = ["tokio-rustls-aws-lc-rs", "deprecated"] }
tempfile = "3.24.0"
thiserror = "2.0.17"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs", "tls12", "logging"] }
tokio-stream = "0.1"
tonic = "0.14.6"
tonic-prost = "0.14.6"
tonic-prost-build = "0.14.6"
tower = "0.5.2"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
