[package]
name = "pandar-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
pandar-core.workspace = true
prost.workspace = true
reqwest.workspace = true
rumqttc.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
suppaftp.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-prost-build.workspace = true

[dev-dependencies]
clap.workspace = true
uuid.workspace = true
