[package]
name = "pandar-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pandar"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
pandar-agent = { path = "../pandar-agent" }
pandar-hub = { path = "../pandar-hub" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
clap.workspace = true
