[package]
name = "pandar-hub"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
pandar-core.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http-body-util.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
