[package]
name = "pandar-hub"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
pandar-core.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-prost-build.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tempfile.workspace = true
tokio-tungstenite = "0.29"
tower = { workspace = true, features = ["util"] }
