[package]
name = "pandar-hub"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
async-nats.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-s3.workspace = true
aws-smithy-types.workspace = true
axum.workspace = true
base64.workspace = true
futures-util.workspace = true
jsonwebtoken.workspace = true
pandar-core.workspace = true
prost.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sea-orm.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-prost-build.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tempfile.workspace = true
tokio-tungstenite = "0.29"
tower = { workspace = true, features = ["util"] }
