[package]
name = "pandar-network-plugin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cc = "1.2.47"

[dependencies]
base64.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
