[package]
name = "pandar-scaled-artifact-smoke"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["multipart"] }
http-body-util = "0.1.3"
pandar-agent = { path = "../../crates/pandar-agent" }
pandar-core = { path = "../../crates/pandar-core" }
pandar-hub = { path = "../../crates/pandar-hub" }
reqwest = { version = "0.13.4", default-features = false, features = ["multipart", "rustls"] }
serde_json = "1.0.145"
tempfile = "3.24.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
