[package]
name = "pandar-scaled-artifact-smoke"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["multipart"] }
futures-util = "0.3.31"
http-body-util = "0.1.3"
pandar-agent = { path = "../../crates/pandar-agent" }
pandar-core = { path = "../../crates/pandar-core" }
pandar-hub = { path = "../../crates/pandar-hub" }
reqwest = { version = "0.13.4", default-features = false, features = ["multipart", "rustls"] }
sea-orm = { version = "2.0.0-rc.41", default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres"] }
serde_json = "1.0.145"
tempfile = "3.24.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.29.0"
tower = "0.5.2"
